@@ -1,5 +1,8 @@
 Change Log
 
+20160209 SCL
+- cleanup of MIN_CURRENT_CAPACITY - added MIN_CURRENT_CAPACITY_J1772
+	
 vD4.1.0 20160201 SCL
 - RAPI v2.0.1: add XOR checksums to async messages
 
